레이아웃 초기 작업 진행.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SVmGithubBrowser</string>
+    <string name="user_photo_description">User Photo</string>
 </resources>
