--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SVmGithubBrowser</string>
     <string name="user_photo_description">User Photo</string>
+    <string name="title_activity_user_detail">UserDetailActivity</string>
 </resources>
